--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -18,7 +18,7 @@
     flex: 1;
     height: 100%;
     width: 100%;
-    flex-direction: row;
+    flex-direction: column;
 
     padding: 6rem 2rem 0;
 
