--- a/frontend/src/container/Header/Header.scss
+++ b/frontend/src/container/Header/Header.scss
@@ -18,15 +18,16 @@
     flex: 1;
     height: 100%;
     width: 100%;
-    flex-direction: column;
+    flex-direction: row;
 
     padding: 6rem 2rem 0;
 
     @media screen and (min-width: 2000px) {
-        padding-top: 8rem;;
+        padding-top: 8rem;
+        flex-direction: row;
     }
     @media screen and (min-width: 1200px) {
-        flex-direction: column;
+        flex-direction: row;
     }
     @media screen and (min-width: 400px) {
         padding: 6rem 1rem 2rem;
@@ -56,6 +57,7 @@
 
     .badge-cmp, .tag-cmp {
         padding: 1rem 2rem;
+        margin: 1rem;
         border: var(--white-color);
         border-radius: 15px;
         flex-direction: row;
@@ -124,32 +126,39 @@
     }
 }
 
-.app__header-img {
-    flex: 1;
-    height: 100%;
-  
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    position: relative;
-  
-    img {
-      width: 100%;
-      object-fit: contain;
-      z-index: 1;
-    }
-  
-    .overlay_circle {
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: 0;
-      width: 100%;
-      height: 90%;
-    }
+    .app__header-img {
+        flex: 4;
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        position: relative;
+
+        img {
+            height: 350px;
+            object-fit: contain;
+            position: absolute;
+            left: 12px;
+            right: 0;
+            bottom: 5rem;
+            z-index: 1;
+            overflow: hidden;
+            border-radius: 50%;
+        }
+
+        .overlay_circle {
+            position: absolute;
+            object-fit: contain;
+            left: 0;
+            right: 0;
+            bottom: 5rem;
+            z-index: 0;
+            height: 350px;
+            width: 340px;
+        }
   
     @media screen and (max-width: 1200px) {
-      margin: 2rem 0;
+        margin: 2rem 0;
     }
   }
+
