--- a/frontend/src/components/SocialMedia.scss
+++ b/frontend/src/components/SocialMedia.scss
@@ -1,14 +1,13 @@
 .app__social {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  
-.icon {
-  margin: 0 10px;
-}  
+  width: auto;
+  display: flex;
+  flex-direction: row; 
+  align-items: center;
+  justify-content: center;
+}
 
-  
+
+.icon {
+  margin-bottom: 10px; 
+}
+
